# pycards

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
pycards/backends/: base.py  terminal.py
pycards/cards/: base.py  static.py
pycards/dealers/: base.py  basic.py
pycards/engines/: base.py  terminal.py
pycards/schedulers/: base.py
pycards/utils/: testing.py
pycards/utils/metrics/: __init__.py  generic.py  text_only.py
tests/unit/cards/: test_static_card.py
tests/unit/dealers/: test_exponentially_weighted_dealer.py
tests/unit/engines/: test_terminal.py
