[tool.poetry]
name = "pycards"
version = "0.1.0"
description = "Python-based flashcards learning app"
authors = [
    "Bru Ronchi <brunom.ronchi@gmail.com>",
    "Juan Griffin <juanogriffin@gmail.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
black = "^23.3.0"
mypy = "^1.2.0"
pylint = "^2.17.2"
pycln = "^2.1.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
